# katapy

./: README.md  noxfile.py  pyproject.toml
katapy/: code.py  tasks.py
literature/: __main__.py  code.py  tasks.py  tox.py
poet/: program.py  tasks.py
pyfu/: program.py  tasks.py
tests/: test_literature.py
