[tool.poetry]
name = "literature"
version = "0.1.0"
description = "A tool for assisting python developers"
authors = ["Nuno Costa <91nunocosta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
coverage-badge = "^1.0.2"
nox = "^2021.10.1"
poetry-core = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
